fixed styling issue with login/signup buttons wrapping when window size shrinks

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -24,7 +24,7 @@
 
 .nav-bar-right-section li{
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     /* height: 64px; */
 }
 
